--- a/static_version/package.json
+++ b/static_version/package.json
@@ -33,6 +33,7 @@
     "fastify": "^4.9.2",
     "jest": "^29.2.2",
     "jest-environment-jsdom": "^29.2.2",
-    "rollup": "^3.2.5"
+    "rollup": "^3.2.5",
+    "rollup-plugin-copy": "^3.4.0"
   }
 }
